# ModDet-2024

./: README.md  project.py  projekt_raport.html  projekt_raport.ipynb  pyproject.toml
